add_sql_file_changed_jupyter_codebook

--- a/location_details.ipynb
+++ b/location_details.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "4      AI  18.220554 -63.068615              Anguilla"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "4  18.220554 -63.068615              Anguilla"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "4  18.220554 -63.068615              Anguilla"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "4   Bangladesh   BD      Asia"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "4   Bangladesh   BD      Asia"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "4  23.684994  90.356331            Bangladesh   BD      Asia"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,6 @@
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>continent</th>\n",
-       "      <th>code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -591,7 +590,6 @@
        "      <td>23.424076</td>\n",
        "      <td>53.847818</td>\n",
        "      <td>Asia</td>\n",
-       "      <td>AE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -599,7 +597,6 @@
        "      <td>33.939110</td>\n",
        "      <td>67.709953</td>\n",
        "      <td>Asia</td>\n",
-       "      <td>AF</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -607,7 +604,6 @@
        "      <td>40.069099</td>\n",
        "      <td>45.038189</td>\n",
        "      <td>Asia</td>\n",
-       "      <td>AM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -615,7 +611,6 @@
        "      <td>40.143105</td>\n",
        "      <td>47.576927</td>\n",
        "      <td>Asia</td>\n",
-       "      <td>AZ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -623,50 +618,49 @@
        "      <td>23.684994</td>\n",
        "      <td>90.356331</td>\n",
        "      <td>Asia</td>\n",
-       "      <td>BD</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                country   latitude  longitude continent code\n",
-       "0  United Arab Emirates  23.424076  53.847818      Asia   AE\n",
-       "1           Afghanistan  33.939110  67.709953      Asia   AF\n",
-       "2               Armenia  40.069099  45.038189      Asia   AM\n",
-       "3            Azerbaijan  40.143105  47.576927      Asia   AZ\n",
-       "4            Bangladesh  23.684994  90.356331      Asia   BD"
+       "                country   latitude  longitude continent\n",
+       "0  United Arab Emirates  23.424076  53.847818      Asia\n",
+       "1           Afghanistan  33.939110  67.709953      Asia\n",
+       "2               Armenia  40.069099  45.038189      Asia\n",
+       "3            Azerbaijan  40.143105  47.576927      Asia\n",
+       "4            Bangladesh  23.684994  90.356331      Asia"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#rearrange the order of columns\n",
-    "loc_info = loc_info[['country', 'latitude', 'longitude', 'continent', 'code']]\n",
+    "loc_info = loc_info[['country', 'latitude', 'longitude', 'continent']]\n",
     "loc_info.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "postgres:postgres@localhost:5432/Project_2\n"
+      "postgres:099426@localhost:5432/postgres\n"
      ]
     }
    ],
    "source": [
     "# Connect to local Database\n",
     "USERNAME = \"postgres\"\n",
-    "PASSWORD = \"postgres\"\n",
-    "DATABASE = \"Project_2\"\n",
+    "PASSWORD = \"099426\"\n",
+    "DATABASE = \"postgres\"\n",
     "rds_connection_string = f\"{USERNAME}:{PASSWORD}@localhost:5432/{DATABASE}\"\n",
     "print(rds_connection_string)\n",
     "engine = create_engine(f'postgresql://{rds_connection_string}')"
@@ -674,9 +668,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['loc']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check for tables\n",
     "engine.table_names()"
@@ -684,9 +689,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>continent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>23.424076</td>\n",
+       "      <td>53.847818</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>33.939110</td>\n",
+       "      <td>67.709953</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>40.069099</td>\n",
+       "      <td>45.038189</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Azerbaijan</td>\n",
+       "      <td>40.143105</td>\n",
+       "      <td>47.576927</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>23.684994</td>\n",
+       "      <td>90.356331</td>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                country   latitude  longitude continent\n",
+       "0  United Arab Emirates  23.424076  53.847818      Asia\n",
+       "1           Afghanistan  33.939110  67.709953      Asia\n",
+       "2               Armenia  40.069099  45.038189      Asia\n",
+       "3            Azerbaijan  40.143105  47.576927      Asia\n",
+       "4            Bangladesh  23.684994  90.356331      Asia"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use pandas to load csv converted DataFrame into database\n",
     "loc_info.to_sql(name='loc', con=engine, if_exists='append', index=False)\n",
